# qahira

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  configure.ac  qahira-png.pc.in
contrib/: sphinx.tga
contrib/example/: Makefile.am  qahira-x11.c
m4/: qahira.m4
pkgconfig/: qahira-targa.pc.in  qahira.pc.in
qahira/: Makefile.am  accumulator.c  accumulator.h  error.c  error.h  format.c  format.h  image-jpeg.c  image-png.c  image-serial.c  image-targa.c  image.c  image.h  jpeg.c  loader-factory.c  loader.c  loader.h  macros.h  marshal.c  marshal.h  marshal.list  png.c  qahira.c  qahira.h  serial.c  surface-factory.c  targa.c  types.h  utility.h
qahira/format/: jpeg.h  png.h  private.h  serial.h  targa.h
qahira/image/: Makefile.am  jpeg.c  jpeg.h  png.h  private.h  serial.h  targa.h
qahira/loader/: Makefile.am  factory.h  jpeg.c  jpeg.h  png.c  png.h  private.h  qahira-jpeg.pc.in  targa.c  targa.h
qahira/surface/: factory.h
qahira/surface/factory/: Makefile.am  image.c  image.h
tests/: Makefile.am  format-test.c  image-test.c  loader-factory-test.c  loader-test.c  qahira-test.c  surface-factory-test.c
